# task-management-service

./: .gitmodules  .project  README.md
design/: README.md  StateDiagram.drawio  TaskManagementService.drawio  Untitled Diagram.drawio
doc/: index.rst
src/cplusplus/: .cproject  .project  CMakeLists.txt  ControlClient  README.md  (+2 more)
src/cplusplus/src/: CMakeLists.txt
src/cplusplus/src/TaskManagementService/CLIENT/Creational/Factories/: CustomSeqExampleTasksToExecuteFactory.cpp
src/cplusplus/src/TaskManagementService/CLIENT/Execution/: TaskIndexFile.h  TaskSendNotifications.h
src/cplusplus/src/TaskManagementService/Creational/: SequenceTasksFactory.cpp
src/cplusplus/src/TaskManagementService/Execution/: ITask.h  SequenceTasks.cpp  SequenceTasks.h  Task.h  TasksManagementService.cpp  TasksManagementService.h
src/cplusplus/src/TaskManagementService/Execution/States/: State.h  StateCancelled.h  StateFailed.cpp  StatePaused.h  StateQueued.h  StateSuccess.cpp
src/cplusplus/src/TasksManagementService/: ClientControl.cpp  ClientControl.h  main.cpp
src/cplusplus/src/TasksManagementService/CLIENT/Creational/: CustomSequenceTasksCatalogConstructor.cpp
src/cplusplus/src/TasksManagementService/CLIENT/Execution/: TaskIndexFile.cpp  TaskSendNotifications.cpp
src/cplusplus/src/TasksManagementService/Execution/: ControlIterator.cpp  ITask.cpp  ITask.h  SequenceIterative.cpp  SequenceIterative.h  SequenceTasks.cpp  SequenceTasks.h  Task.cpp  TasksManagementService.cpp  TasksManagementService.h
src/cplusplus/src/TasksManagementService/Execution/States/: StateFailed.h
(+66 files in other folders)
